The Samba-Bugzilla – Bug 12194
idmap_script: missing "IDTOSID" argument in scripts command line
Last modified: 2016-09-07 15:11:02 UTC
According to the documentation the idmap script commands should look like "IDTOSID UID xxxx" instead of "UID xxxx". Existing scripts, used by the idmap module, might not work. The changes were introduced with the commit b4239ca096738f553b0f9d7fa6aaa4219b72ef7f "idmap_script: Parallelize script calls" I'll send a patch to the samba-technical mailing list, soon.
Created attachment 12449 [details] Patch for v4-5-test
Comment on attachment 12449 [details] Patch for v4-5-test LGTM
Pushed to autobuild-v4-5-test.
Pushed to v4-5-test